// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render AddTransaction page correctly 1`] = `
<div>
  <h1>
     Add Transaction
  </h1>
  <TransactionForm
    onSubmit={[Function]}
  />
</div>
`;

exports[`should render startAddTransaction page correctly 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container"
    >
      <h1
        className="page-header__title"
      >
         Add Transaction
      </h1>
       
    </div>
  </div>
  <div
    className="content-container"
  >
    <TransactionForm
      onSubmit={[Function]}
    />
  </div>
</div>
`;
